--- a/src/components/ScoringMethodology/ScoringMethodology.css
+++ b/src/components/ScoringMethodology/ScoringMethodology.css
@@ -25,10 +25,10 @@
     margin-top: 30px;
     margin-bottom: 20px;
   }
-  
+
   .methodology-page h3 {
-    margin-top: 25px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    margin-top: 20px;
   }
   
   .methodology-page p {
@@ -38,6 +38,11 @@
   
   .increase-score-list li {
     margin-bottom: 5px;
+  }
+
+  .related-pages-title h3 {
+    margin-bottom: 10px;
+    margin-top: 20px;
   }
   
   .methodology-page-chart .score-gauge {
