--- a/src/components/Resources/Resources.css
+++ b/src/components/Resources/Resources.css
@@ -156,20 +156,13 @@
 
 /* ======= Filter Controls Container ======= */
 .filter-controls-container {
+  align-items: unset;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-bottom: 20px;
   gap: 20px;
-}
-
-/* Filter bar */
-.filter-bar {
-  background-color: var(--navbar-bg);
-  border: 2px solid var(--card-border);
-  border-radius: 8px;
-  padding: 15px;
-  flex-grow: 1;
+  justify-content: space-between;
+  margin-bottom: 0px;
+  flex-direction: column;
+  align-content: center;
 }
 
 .filter-section {
@@ -182,6 +175,7 @@
   align-items: center;
   gap: 20px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* Filter dropdown */
@@ -370,7 +364,7 @@
   width: 16px;
   height: 16px;
   border-radius: 5px;
-  top: 2px;
+  top: 1px;
   left: 2px;
   background-color: white;
   transition: transform 0.3s;
@@ -381,7 +375,7 @@
 }
 
 .toggle-label input[type="checkbox"]:checked::before {
-  transform: translateX(18px);
+  transform: translateX(14px);
 }
 
 .toggle-label input[type="checkbox"]:focus {
@@ -437,8 +431,7 @@
 }
 
 .quick-actions .share-button {
-  background: var(--button-bg);
-  border: 2px solid var(--button-bg);
+  padding: 14px 20px;
 }
 
 /* ======= Resource Cards ======= */
